[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/ARIALBD.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/MainMenu/MainMenuBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/MainMenu/MainMenu.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 4 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1472.0
margin_top = -100.0
margin_right = -1319.0
margin_bottom = 77.0
rect_scale = Vector2( 2, 2 )
alignment = 1

[node name="Resume Game" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 153.0
margin_bottom = 62.0
input_pass_on_modal_close_click = false
keep_pressed_outside = true
text = "Start/Resume Game"

[node name="Level Select" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 153.0
margin_bottom = 86.0
input_pass_on_modal_close_click = false
keep_pressed_outside = true
text = "Level Select"

[node name="Options Button" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 153.0
margin_bottom = 110.0
input_pass_on_modal_close_click = false
keep_pressed_outside = true
text = "Options"

[node name="Quit Button" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 153.0
margin_bottom = 134.0
input_pass_on_modal_close_click = false
keep_pressed_outside = true
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
limit_right = 0
limit_bottom = 0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -912.0
margin_top = 64.0
margin_right = -679.0
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 1 )
text = "GOING HOME"

[node name="MenuBackground" parent="." instance=ExtResource( 5 )]
position = Vector2( -1024, 0 )
z_index = -100

[connection signal="pressed" from="VBoxContainer/Resume Game" to="." method="_on_Resume_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Level Select" to="." method="_on_Level_Select_pressed"]
[connection signal="pressed" from="VBoxContainer/Options Button" to="." method="_on_Options_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit Button" to="." method="_on_Quit_Button_pressed"]
